Use only the Bazel server for bootstrapping
This remove all C++ compilation in bootstrapping itself.

--
MOS_MIGRATED_REVID=112407516